Fix text overflow with too long words

--- a/src/Tracy/TracyPets.panel.phtml
+++ b/src/Tracy/TracyPets.panel.phtml
@@ -17,6 +17,10 @@
 		padding-right: 505px !important;
 	}
 
+	#tracy-bs .tracy-bs-main .tracy-section--error h1 {
+		line-break: anywhere;
+	}
+
 	#tracy-bs .tracy-bs-main::before {
 		content: "";
 		display: block;
